--- a/.gitignore
+++ b/.gitignore
@@ -304,3 +304,5 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.toptal.com/developers/gitignore/api/macos,windows,linux,intellij+all,node
+
+!public/dist
