--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "browserify-zlib": "^0.2.0",
     "buffer": "^6.0.3",
     "crypto-browserify": "^3.12.0",
+    "encoding": "^0.1.13",
     "html-to-docx": "^1.8.0",
     "https-browserify": "^1.0.0",
     "stream-browserify": "^3.0.0",
@@ -22,8 +23,8 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "serve": "^14.2.0",
     "webpack": "^5.79.0",
-    "webpack-cli": "^5.0.1",
-    "serve": "^14.2.0"
+    "webpack-cli": "^5.0.1"
   }
 }
